#23507 Security tests fixed + removed old soteria tests and other dead tests